Prepares project for final rendu

--- a/client_main.ipynb
+++ b/client_main.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 211,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -25,8 +25,6 @@
    },
    "outputs": [],
    "source": [
-    "import random\n",
-    "\n",
     "import numpy as np"
    ]
   },
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 212,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -59,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 213,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -80,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 214,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 215,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -118,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 216,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -138,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 217,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -159,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 218,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 219,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -212,11 +210,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'Hello World 😃'"
-      ]
+      "text/plain": "'Hello World 😃'"
      },
-     "execution_count": 9,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 220,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -273,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 221,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -313,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 222,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -328,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 223,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -368,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 224,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -399,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 225,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -422,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 226,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -465,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 227,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -485,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 228,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -516,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 229,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -559,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 230,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -571,13 +567,13 @@
      "output_type": "stream",
      "text": [
       "Channel input:     [-1, -1, -1, 1, 1, -1, -1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, 1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, 1]\n",
-      "Channel output:    [-1, -1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, 1, -1, 0, -1, 1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, 1, 1, 0, -1, 1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, 1, 0, 1, -1, 0, 1, -1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, 1, -1, 0, 1, -1, 0]\n",
+      "Channel output:    [-1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, -1, 0, 1, -1, 0, 1, -1, 0, 1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, -1, 1, 0, 1, 1, 0, -1, 1, 0, 1, 1, 0, 1]\n",
       "\n",
       "Uninterleaved in:  [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1]\n",
-      "Uninterleaved out: [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Uninterleaved out: [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1, -1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1]\n",
       "\n",
-      "Decoded output:    [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
-      "Erased codeword:   2 [3]\n",
+      "Decoded output:    [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1]\n",
+      "Erased codeword:   1 [3]\n",
       "\n",
       "Sent:              [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
       "Restored:          [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
@@ -642,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 231,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -667,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 232,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -707,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 233,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -749,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 234,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -785,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 235,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -824,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 236,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -884,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 237,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -898,9 +894,9 @@
       "Codeword 1:      [-1, 1, -1]\n",
       "Codeword 2:      [1, -1, -1]\n",
       "Codeword 3:      [-1, -1, 1]\n",
-      "Uninterleaved:   [-2.83161035  3.8295799   2.43992265  3.70063509  0.73906368  1.38255729\n",
-      "  6.1396697   1.41819139  1.56100849]\n",
-      "Erased predict:  1\n",
+      "Uninterleaved:   [-1.05805792 -0.31481952  3.46516585  4.17132068 -4.40583493 -1.78990744\n",
+      "  1.45260471  2.68055258  5.2014693 ]\n",
+      "Erased predict:  0\n",
       "Erased real:     2\n"
      ]
     }
@@ -940,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 238,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -973,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 239,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -984,7 +980,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correctness ratio:  1.0\n",
+      "Correctness ratio:  0.9\n",
       "Nb sent symbols:    4500\n"
      ]
     }
@@ -1056,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 240,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1077,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 241,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1125,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 242,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1190,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 243,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1209,8 +1205,8 @@
     }
    ],
    "source": [
-    "# this string is 80 char long\n",
-    "string_to_send = \"Hello World is the CLIC event that aims at introducing students to IC Faculty wow\" \n",
+    "# this string is 81 char long\n",
+    "string_to_send = \"Hello World is the CLIC event that aims at introducing students to IC Faculty wow\"\n",
     "print(\"Sent word:     \", string_to_send)\n",
     "received_string, nb_symbols = whole_procedure(string_to_send, 9, 9)\n",
     "print(\"Received word: \", received_string)\n",
@@ -1220,26 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "81\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(string_to_send))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 244,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1257,7 +1234,7 @@
    ],
    "source": [
     "nb_success = nb_fails = 0\n",
-    "for i in range(10):\n",
+    "for i in range(5):\n",
     "    received_string, nb_symbols = whole_procedure(string_to_send, 9, 9)\n",
     "    if string_to_send == received_string:\n",
     "        nb_success += 1\n",
@@ -1272,18 +1249,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running the client script"
+    "## Running the client script\n",
+    "\n",
+    "We finally run the above procedure on the client script. We bring one slight modification: we'll receive  *exactly\n",
+    "$80$ bytes* to send. We remarked that encoding blocks of $9$ bits with $C_9$ allows us to successfully be\n",
+    " below the $60 000$ symbols through channel bound. The last appended byte is `'o'`, and we remove it from the decoded\n",
+    "  string to retrieve the original one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
     "def first_part_procedure(string, code_size, nb_bits_send):\n",
-    "    # 1. convert string to bitarray\n",
-    "    bitarray = string_to_bitarray(string)\n",
+    "    # 1. convert string to bitarray (we add out last byte)\n",
+    "    bitarray = string_to_bitarray(str(string + \"o\"))\n",
     "\n",
     "    # 2. create the pairs of 2*k bits to compute checksum bits\n",
     "    if len(bitarray) % (2 * nb_bits_send) != 0: print(\"Error, the input should have length multiple of 2k (here:\",\n",
@@ -1304,24 +1286,22 @@
     "    nb_triplets = len(k_bits_pairs)\n",
     "    cw_triplets_interleaved = np.array(cw_triplets_interleaved).flatten()\n",
     "    nb_symbols = len(cw_triplets_interleaved)\n",
-    "    \n",
-    "    #4 We save as a txt file\n",
-    "    np.savetxt('input.txt',cw_triplets_interleaved)\n",
     "\n",
-    "    return nb_triplets"
+    "    #4 We save as a txt file\n",
+    "    np.savetxt('input.txt', cw_triplets_interleaved)\n",
+    "\n",
+    "    return nb_triplets, nb_symbols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def second_part_procedure(output_file_name, code_size, nb_bits_send,nb_triplets):\n",
-    "    \n",
-    "\n",
+    "def second_part_procedure(output_file_name, code_size, nb_bits_send, nb_triplets):\n",
     "    # 4. We read the output from the channel\n",
-    "    channel_output =  np.loadtxt(output_file_name)\n",
+    "    channel_output = np.loadtxt(output_file_name)\n",
     "\n",
     "    # 5. we uninterleave the input\n",
     "    output_triplets = np.array_split(np.array(channel_output), nb_triplets)\n",
@@ -1347,46 +1327,58 @@
     "    # 9. we interpret back our bitarray as string\n",
     "    decoded_string = bitarray_to_string(decoded_bitarray)\n",
     "\n",
-    "    # 10. enjoy\n",
-    "    return decoded_string, nb_symbols"
+    "    # 10. enjoy (we removed the previously added bit\n",
+    "    return decoded_string[:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_triplets = first_part_procedure(string_to_send,9,9)"
+    "# this string is 80 bytes long\n",
+    "string_to_send = \"Hello World is the CLIC event that aims at introducing students to IC Faculty wo\"\n",
+    "nb_triplets, nb_symbols = first_part_procedure(string_to_send, 9, 9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run client --input_file input.txt --output_file output.txt --srv_hostname iscsrv72.epfl.ch --srv_port 80"
+    "# we take as input 'input.txt' and send it through the channel\n",
+    "!python3 client.py --input_file input.txt --output_file output.txt --srv_hostname iscsrv72.epfl.ch --srv_port 80"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 249,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World is the CLIC event that aims at introducing students to IC Faculty wow\n",
-      "True\n"
+      "The input string was:  Hello World is the CLIC event that aims at introducing students to IC Faculty wo\n",
+      "The decoded string is: Hello World is the CLIC event that aims at introducing students to IC Faculty wo\n",
+      "Those are  equal\n",
+      "we used 55188 to send it through our channel !\n"
      ]
     }
    ],
    "source": [
-    "decoded_string, block_size =second_part_procedure('output.txt',9,9,nb_triplets)\n",
-    "print(decoded_string)\n",
-    "print(string_to_send == decoded_string)"
+    "decoded_string = second_part_procedure('output.txt', 9, 9, nb_triplets)\n",
+    "\n",
+    "print(\"The input string was: \", string_to_send)\n",
+    "print(\"The decoded string is:\", decoded_string)\n",
+    "print(\"Those are\", '' if (string_to_send == decoded_string) else 'not', 'equal')\n",
+    "print(\"we used\", nb_symbols, \"to send it through our channel !\")\n"
    ]
   }
  ],
