Adapts code to fill up to 81 bytes

--- a/client_main.ipynb
+++ b/client_main.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 119,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 120,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 121,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 122,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 123,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 124,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 125,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 126,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 127,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -212,7 +212,7 @@
      "data": {
       "text/plain": "'Hello World 😃'"
      },
-     "execution_count": 219,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 128,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 129,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 130,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 131,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 132,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 133,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 134,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 135,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 136,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 137,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 138,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -567,13 +567,13 @@
      "output_type": "stream",
      "text": [
       "Channel input:     [-1, -1, -1, 1, 1, -1, -1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, 1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, 1]\n",
-      "Channel output:    [-1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, -1, 0, 1, -1, 0, 1, -1, 0, 1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, -1, 1, 0, 1, 1, 0, -1, 1, 0, 1, 1, 0, 1]\n",
+      "Channel output:    [-1, -1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, 1, -1, 0, -1, 1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, 1, 1, 0, -1, 1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, 1, 0, 1, -1, 0, 1, -1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, 1, -1, 0, 1, -1, 0]\n",
       "\n",
       "Uninterleaved in:  [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1]\n",
-      "Uninterleaved out: [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1, -1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1]\n",
+      "Uninterleaved out: [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "\n",
-      "Decoded output:    [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1]\n",
-      "Erased codeword:   1 [3]\n",
+      "Decoded output:    [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
+      "Erased codeword:   2 [3]\n",
       "\n",
       "Sent:              [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
       "Restored:          [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 139,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 140,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 141,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -740,12 +740,12 @@
    },
    "source": [
     "We try to encode the $10$ and $01$ bits pairs. We then have $k=2$ and use $C_2$. Their parity check bits are $11$. We\n",
-    " should then have the codewords $3$, $2$ and $4$ of $C_2$"
+    " should then have the codewords $2$, $1$ and $3$ of $C_2$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 142,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 143,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 144,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 145,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -894,10 +894,10 @@
       "Codeword 1:      [-1, 1, -1]\n",
       "Codeword 2:      [1, -1, -1]\n",
       "Codeword 3:      [-1, -1, 1]\n",
-      "Uninterleaved:   [-1.05805792 -0.31481952  3.46516585  4.17132068 -4.40583493 -1.78990744\n",
-      "  1.45260471  2.68055258  5.2014693 ]\n",
-      "Erased predict:  0\n",
-      "Erased real:     2\n"
+      "Uninterleaved:   [ 2.80807163 -4.01369838  0.11440927 -2.16887047 -1.34246423  1.31086201\n",
+      " -1.43918073  0.84194652 -0.05421587]\n",
+      "Erased predict:  2\n",
+      "Erased real:     0\n"
      ]
     }
    ],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 146,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 147,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -980,7 +980,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correctness ratio:  0.9\n",
+      "Correctness ratio:  0.7\n",
       "Nb sent symbols:    4500\n"
      ]
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 148,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 149,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 150,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 151,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 152,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1251,21 +1251,25 @@
    "source": [
     "## Running the client script\n",
     "\n",
-    "We finally run the above procedure on the client script. We bring one slight modification: we'll receive  *exactly\n",
-    "$80$ bytes* to send. We remarked that encoding blocks of $9$ bits with $C_9$ allows us to successfully be\n",
-    " below the $60 000$ symbols through channel bound. The last appended byte is `'o'`, and we remove it from the decoded\n",
+    "We finally run the above procedure on the client script. We bring one slight modification: we'll receive  **less than\n",
+    "$80$ bytes** to send. We remarked that encoding blocks of $9$ bits with $C_9$ allows us to successfully be\n",
+    " below the $60 000$ symbols through channel bound. The last appended bytes are `'o'` to reach 81 bytes (dividable in\n",
+    " blocks of size $9$), and we\n",
+    " remove it\n",
+    " from the decoded\n",
     "  string to retrieve the original one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
     "def first_part_procedure(string, code_size, nb_bits_send):\n",
-    "    # 1. convert string to bitarray (we add out last byte)\n",
-    "    bitarray = string_to_bitarray(str(string + \"o\"))\n",
+    "    # 1. convert string to bitarray (we add out last bytes)\n",
+    "    bytes_to_append = \"o\" * (81-len(string))\n",
+    "    bitarray = string_to_bitarray(str(string+bytes_to_append))\n",
     "\n",
     "    # 2. create the pairs of 2*k bits to compute checksum bits\n",
     "    if len(bitarray) % (2 * nb_bits_send) != 0: print(\"Error, the input should have length multiple of 2k (here:\",\n",
@@ -1295,11 +1299,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def second_part_procedure(output_file_name, code_size, nb_bits_send, nb_triplets):\n",
+    "def second_part_procedure(output_file_name, code_size, nb_bits_send, nb_triplets, initial_length):\n",
     "    # 4. We read the output from the channel\n",
     "    channel_output = np.loadtxt(output_file_name)\n",
     "\n",
@@ -1328,12 +1332,12 @@
     "    decoded_string = bitarray_to_string(decoded_bitarray)\n",
     "\n",
     "    # 10. enjoy (we removed the previously added bit\n",
-    "    return decoded_string[:-1]"
+    "    return decoded_string[:initial_length]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 157,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1373,7 +1377,7 @@
     }
    ],
    "source": [
-    "decoded_string = second_part_procedure('output.txt', 9, 9, nb_triplets)\n",
+    "decoded_string = second_part_procedure('output.txt', 9, 9, nb_triplets, len(string_to_send))\n",
     "\n",
     "print(\"The input string was: \", string_to_send)\n",
     "print(\"The decoded string is:\", decoded_string)\n",
